--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "activationEvents": [
     "onLanguage:json"
   ],
+  "repository": {
+    "url": "https://github.com/bashbers/changelog-on-hover"
+  },
   "main": "./dist/extension.js",
   "contributes": {
     "configuration": {
